<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/showPopupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/showDialogButton"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/label_show_popup"
        />

    <Button
        android:id="@+id/showDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showPopupButton"
        app:layout_constraintBottom_toTopOf="@id/showDialogFragmentButton"
        android:layout_marginTop="40dp"
        android:text="@string/label_show_dialog"
        />

    <Button
        android:id="@+id/showDialogFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showDialogButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/label_show_dialo_fragment"
        />

</androidx.constraintlayout.widget.ConstraintLayout>