<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/border_background"
    >

    <TextView
        android:id="@+id/windowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/otherButton"
        android:text="@string/title_dialog_fragment"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/otherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/windowTitle"
        app:layout_constraintBottom_toTopOf="@id/dismissButton"
        android:layout_marginTop="24dp"
        android:text="@string/label_other"
        />

    <Button
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otherButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/label_dismiss"
        />
</androidx.constraintlayout.widget.ConstraintLayout>